AB_WOD_Sprint5+V_1.0/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>This field is using in IOS mobile360 application to create task</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Display</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>POCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign Making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glassware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Geo_Location__c</fullName>
        <label>End Geo Location</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Out_of_Range_Reason__c</fullName>
        <label>Out of Range Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Order Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inaccurate Signal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Planning</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Out_of_Range_on_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Range on End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_of_Range_on_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Range on Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Geo_Location__c</fullName>
        <label>Start Geo Location</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Visit_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_in_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit in Progress</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>